--- a/index.html
+++ b/index.html
@@ -1,12 +1,36 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="shortcut icon" href="Images/gadget.png" type="image/x-icon">
+    <script src="https://kit.fontawesome.com/d7e626f44b.js" crossorigin="anonymous"></script>
     <title>Goriber Gadget</title>
 </head>
 <body>
-    
+    <!-- header -->
+    <section class="d-flex justify-content-center align-items-center">
+        <h1>Goriber Gadget</h1>
+        <i class="fa-solid fa-phone d-block fs-3"></i>
+    </section>
+    <!-- header end -->
+    <!-- input -->
+    <section class="container mx-auto d-flex justify-content-center">
+        <input id="input" type="text" placeholder="Search your phone" class="w-75">
+        <button id="search" class="btn btn-primary">Submit</button>
+    </section>
+    <!-- input end -->
+    <!-- detail section -->
+    <section id="detail-section">
+
+    </section>
+    <!-- card -->    
+    <div id="card-section" class="row row-cols-1 row-cols-md-3 g-4 container mx-auto">
+      </div>
+      <!-- card end -->
+    <script src="JS/app.js"></script>
 </body>
 </html>
