--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="CSS/style.css">
-    <link rel="shortcut icon" href="Images/gadget.png" type="image/x-icon">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="images/gadget.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/d7e626f44b.js" crossorigin="anonymous"></script>
     <title>Goriber Gadget</title>
 </head>
@@ -31,6 +31,8 @@
     <div id="card-section" class="row row-cols-1 row-cols-md-3 g-4 container mx-auto">
       </div>
       <!-- card end -->
-    <script src="JS/app.js"></script>
+
+      
+    <script src="js/app.js"></script>
 </body>
 </html>
