load more 20+ works

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
     <div id="card-section" class="row row-cols-1 row-cols-md-3 g-4 container mx-auto">
       </div>
       <!-- card end -->
-
+    <div class="text-center my-5" id="load-more">
+        <button id="load-button" class="btn btn-primary">Load More</button>
+    </div>
 
     <script src="js/app.js"></script>
 </body>
