--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
         <button id="search" class="btn btn-primary">Submit</button>
     </section>
     <!-- input end -->
+    <div  class="d-flex justify-content-center">
+        <div id="my-spinner" role="status">
+        </div>
+      </div>
     <!-- detail section -->
     <section id="detail-section">
         
@@ -34,6 +38,7 @@
     <div class="text-center my-5" id="load-more">
         <button id="load-button" class="btn btn-primary">Load More</button>
     </div>
+    
 
     <script src="js/app.js"></script>
 </body>
