--- a/index.html
+++ b/index.html
@@ -23,10 +23,12 @@
         <button id="search" class="btn btn-primary">Submit</button>
     </section>
     <!-- input end -->
+    <!-- spinner -->
     <div  class="d-flex justify-content-center">
         <div id="my-spinner" role="status">
         </div>
       </div>
+      <!-- spinner end -->
     <!-- detail section -->
     <section id="detail-section">
         
