load more corrected

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
     <div id="card-section" class="row row-cols-1 row-cols-md-3 g-4 container mx-auto">
       </div>
       <!-- card end -->
+      <div id="load-section" class="row row-cols-1 row-cols-md-3 g-4 container mx-auto">
+    </div>
     <div class="text-center my-5" id="load-more">
         <button id="load-button" class="btn btn-primary">Load More</button>
     </div>
