--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="images/gadget.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/d7e626f44b.js" crossorigin="anonymous"></script>
     <title>Goriber Gadget</title>
 </head>
+
 <body>
     <!-- header -->
     <section class="d-flex justify-content-center align-items-center">
@@ -24,26 +27,27 @@
     </section>
     <!-- input end -->
     <!-- spinner -->
-    <div  class="d-flex justify-content-center">
+    <div class="d-flex justify-content-center">
         <div id="my-spinner" role="status">
         </div>
-      </div>
-      <!-- spinner end -->
+    </div>
+    <!-- spinner end -->
     <!-- detail section -->
     <section id="detail-section">
-        
+
     </section>
-    <!-- card -->    
+    <!-- card -->
     <div id="card-section" class="row row-cols-1 row-cols-md-3 g-4 container mx-auto">
-      </div>
-      <!-- card end -->
-      <div id="load-section" class="row row-cols-1 row-cols-md-3 g-4 container mx-auto">
+    </div>
+    <!-- card end -->
+    <div id="load-section" class="row row-cols-1 row-cols-md-3 g-4 container mx-auto">
     </div>
     <div class="text-center my-5" id="load-more">
         <button id="load-button" class="btn btn-primary">Load More</button>
     </div>
-    
+
 
     <script src="js/app.js"></script>
 </body>
+
 </html>
